[package]
name = "message_exchange"
version = "0.0.1"
edition = "2021"
authors = ["Christoph Bonitz"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.66"
futures = "0.3.25"
tracing = "0.1"
debug-ignore = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
itertools = "0"
distinct_permutations = { git="https://github.com/cbonitz/distinct_permutations.git", branch="v0.0.1" }