[package]
name = "hauspost"
version = "0.1.0"
edition = "2021"
authors = ["Christoph Bonitz"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.4"
anyhow = "1.0.66"
futures = "0.3.25"
tracing = "0.1"
debug-ignore = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4.2"
itertools = "0"
distinct_permutations = { git = "https://github.com/cbonitz/distinct_permutations.git", branch = "v0.0.1" }
criterion = { version = "0.4", features = ["async_tokio"] }

[[bench]]
name = "message_benchmark"
harness = false
